# VDS04_AEdition

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ci-status.sh
src/: Manager.cpp  Manager.h  main  main.cpp
src/test/: main_test.cpp
